Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,11 +77,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7faf91e201f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create table here"
+    "cursor.execute('''\n",
+    "CREATE TABLE cats (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    age INTEGER,\n",
+    "    breed TEXT\n",
+    ")\n",
+    "''')"
    ]
   },
   {
